[package]
name = "dodo"
version = "0.1.0"
authors = ["Adam Subora <adam.subora@proton.me>"]
description = "A minimal cli to-do app"
repository = "https://github.com/asub-sandwich/dodo"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.74"
keywords = ["todo", "to-do"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clap-markdown = "0.1.4"
colored = "3.0.0"
directories-next = "2.0.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[[bin]]
name = "dodo"
path = "src/main.rs"
doc = false

[lib]
name = "dodo"
path = "src/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true