[package]
name = "dodo"
version = "0.1.0"
authors = ["Adam Subora <adam.subora@proton.me>"]
description = "A minimal cli to-do app"
homepage = "https://github.com/asub-sandwich/dodo"
repository = "https://github.com/asub-sandwich/dodo"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.74"
keywords = ["cli", "todo", "to-do"]
categories = ["command-line-interface"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
console = "0.15.10"
directories-next = "2.0.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
unicode-width = { version = "0.2.0", default-features = false }

[[bin]]
name = "dodo"
path = "src/main.rs"
doc = false

[lib]
name = "dodo"
path = "src/lib.rs"

